force-app/main/default/objects/GAP_Storage_Field__c/GAP_Storage_Field__c.object-meta.xml
<CustomObject>
    <label>GAP 필드</label>
    <nameField>
        <label>GAP 필드 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>