force-app/main/default/objects/GAP_Storage_Field__c/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <label>비고</label>
    <length>64</length>
    <type>Text</type>
</CustomField>