force-app/main/default/objects/GAP_Storage_Field__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>컬럼명</label>
    <length>65</length>
    <type>Text</type>
</CustomField>