force-app/main/default/objects/GAP_Storage_Field__c/fields/GAP__c.field-meta.xml
<CustomField>
    <fullName>GAP__c</fullName>
    <label>GAP 스토리지</label>
    <referenceTo>GAP_Storage__c</referenceTo>
    <relationshipLabel>GAP 필드</relationshipLabel>
    <relationshipName>GAP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>