force-app/main/default/objects/GAP_Storage_Field__c/fields/Len__c.field-meta.xml
<CustomField>
    <fullName>Len__c</fullName>
    <label>길이</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>