force-app/main/default/objects/GAP_Storage_Field__c/fields/NOT_NULL__c.field-meta.xml
<CustomField>
    <fullName>NOT_NULL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOT NULL</label>
    <type>Checkbox</type>
</CustomField>