force-app/main/default/objects/GAP_Storage_Field__c/fields/PK__c.field-meta.xml
<CustomField>
    <fullName>PK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PK</label>
    <type>Checkbox</type>
</CustomField>