force-app/main/default/objects/GAP_Storage_Field__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>순서</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>