force-app/main/default/objects/GAP_Storage_Field__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>타입</label>
    <length>64</length>
    <type>Text</type>
</CustomField>